Expand Odoo school services
